# robodog-search-and-find

./: commands.py  image.py  logs.py  main.py  pyproject.toml
dionysus/: commandset.py  parser.py  prompt_template.py
dionysus/argument/: base.py
dionysus/argument_type/: base.py  compound_argument.py  groups.py  primative.py
dionysus/command/: base.py  descriptor.py  result.py  thought_chain.py  web.py
dionysus/test/: test_dionysus.py
